recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:11: error: not found: value pas
		pas = steps-1
                ^Spiral:13: error: not found: value pas
		spiral(pas, 90, longueur, 5)
                       ^